[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://maps/DemoMap/DemoMap.tscn" type="PackedScene" id=2]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
initial_scene = ExtResource( 2 )

[node name="Default" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.5
margin_top = -34.0
margin_right = 39.5
margin_bottom = 34.0

[node name="Start" type="Button" parent="Default"]
margin_right = 79.0
margin_bottom = 20.0
text = "Start"

[node name="Options" type="Button" parent="Default"]
margin_top = 24.0
margin_right = 79.0
margin_bottom = 44.0
text = "Options"

[node name="Rate" type="Button" parent="Default"]
margin_top = 48.0
margin_right = 79.0
margin_bottom = 68.0
text = "Rate game"

[node name="Options" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -71.0
margin_right = 48.5
margin_bottom = 71.0

[node name="Label" type="Label" parent="Options"]
margin_right = 97.0
margin_bottom = 14.0
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="Options"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
min_value = -80.0
max_value = 0.0

[node name="Label2" type="Label" parent="Options"]
margin_top = 38.0
margin_right = 97.0
margin_bottom = 52.0
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="Options"]
margin_top = 56.0
margin_right = 97.0
margin_bottom = 72.0
min_value = -80.0
max_value = 0.0

[node name="Label3" type="Label" parent="Options"]
margin_top = 76.0
margin_right = 97.0
margin_bottom = 90.0
text = "SFX Volume"

[node name="SfxVolumeSlider" type="HSlider" parent="Options"]
margin_top = 94.0
margin_right = 97.0
margin_bottom = 110.0
min_value = -80.0
max_value = 0.0

[node name="HSeparator" type="HSeparator" parent="Options"]
margin_top = 114.0
margin_right = 97.0
margin_bottom = 118.0

[node name="BackButton" type="Button" parent="Options"]
margin_top = 122.0
margin_right = 97.0
margin_bottom = 142.0
text = "Back"

[connection signal="pressed" from="Default/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Default/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Default/Rate" to="." method="_on_Rate_pressed"]
[connection signal="value_changed" from="Options/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="Options/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="Options/SfxVolumeSlider" to="." method="_on_SfxVolumeSlider_value_changed"]
[connection signal="pressed" from="Options/BackButton" to="." method="_on_BackButton_pressed"]
